<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">TMEIT</string>

    <string name="about_nav_title">About</string>
    <string name="about_text_intro">TMEIT for Android is developed by <a href="http://se.linkedin.com/in/wilhelmsvenselius">Wilhelm Svenselius</a> and contributors for <a href="http://tmeit.se">TMEIT</a>. You can check out the source code, report bugs and feedback on <a href="https://github.com/wsv-accidis/tmeit-android">GitHub</a>.</string>

    <string name="age_check_begin">Anyone born</string>
    <string name="age_check_end">…or earlier, is over 18 today.</string>
    <string name="age_check_nav_title">Over 18?</string>
    <string name="age_check_placeholder" translatable="false">YYYY-MM-DD</string>
    <string name="age_check_legal">Persons younger than 18 may not be served alcohol. Responsibility to check age always resides with the person serving. Persons who can not verify their age must not be served. Breaking this law is punishable by fine or up to four years imprisonment.</string>

    <string name="auth_error_code_denied">The authorization code was rejected by the server. It may have expired. Try logging in again. Also, make sure you have the latest version of this app.</string>
    <string name="auth_error_code_not_valid">This authorization time code is not valid. Try logging in again. Also, make sure that you have the latest version of this app.</string>
    <string name="auth_error_unspecified_network">There was an error contacting the server. Please ensure you have Internet connectivity, then try again.</string>
    <string name="auth_error_unspecified_protocol">An unexpected error occurred while authenticating. Try again. If the issue persists, make sure you have the latest version of this app.</string>
    <string name="auth_error_invalid_data">The authentication data is no longer valid. Try logging in again.</string>

    <string name="crop_photo_done">Done</string>
    <string name="crop_photo_saving">Saving photo…</string>
    <string name="crop_photo_please_wait">Please wait…</string>

    <string name="event_attendee">attendee</string>
    <string name="event_attendees">attendees</string>
    <string name="event_attendees_title">Attendees</string>
    <string name="event_attending">Attending</string>
    <string name="event_date_of_birth">Date of birth (YYYY-MM-DD)</string>
    <string name="event_delete">Delete</string>
    <string name="event_drink_prefs">Drink preferences</string>
    <string name="event_external_info_nav_title">Event</string>
    <string name="event_external_nav_title">External events</string>
    <string name="event_internal_nav_title">Our events</string>
    <string name="event_food_prefs">Food preferences</string>
    <string name="event_last_signup_date">Last signup</string>
    <string name="event_last_signup_passed">Last signup has passed</string>
    <string name="event_more_information_at_url">More info at </string>
    <string name="event_no_attendees_yet">Nobody is attending.</string>
    <string name="event_not_attending">Not attending</string>
    <string name="event_notes">Notes (only visible to masters)</string>
	<string name="event_report_event">Report event</string>
	<string name="event_report_this_event">Report this event</string>
    <string name="event_save">Save</string>
    <string name="event_work_comment">Comments</string>
    <string name="event_work_between">I can work between %1$02d:00 - %2$02d:00</string>
    <string name="event_work_dont_know">I don\'t know when I can work</string>
    <string name="event_work_this_event">Work this event</string>
    <string name="event_work_use_slider">Drag the handles to select an interval.</string>
    <string name="event_work_zero_hours">You can\'t select an interval shorter than one hour.</string>
    <string name="event_worker">worker</string>
    <string name="event_worker_no_team_placeholder">none</string>
    <string name="event_workers">workers</string>
    <string name="event_workers_maybe">Said Maybe</string>
    <string name="event_workers_no">Said No</string>
    <string name="event_workers_of">of</string>
    <string name="event_workers_yes">Said Yes</string>

    <string-array name="event_work_options">
        <item>Yes, I\'m going to work</item>
        <item>Maybe</item>
        <item>No, I can\'t work</item>
    </string-array>

    <string name="member_add_contact">Add as contact</string>
    <string name="member_call">Call</string>
    <string name="member_contact_could_not_saved">Could not save contact, something went wrong. Please make a bug report.</string>
    <string name="member_contact_saved">Contact saved.</string>
    <string name="member_drivers_license">Driver\'s license</string>
	<string name="member_email">Mail</string>
    <string name="member_exp" translatable="false">Exp</string>
    <string name="member_fest" translatable="false">FEST</string>
    <string name="member_filter_list">Filter list</string>
    <string name="member_images_nav_title">Images</string>
    <string name="member_info">Info</string>
    <string name="member_make_call">Make call</string>
    <string name="member_marskalk" translatable="false">Marskalk</string>
    <string name="member_message">SMS</string>
    <string name="member_nav_title">Member</string>
    <string name="member_no_email">No e-mail address for this member.</string>
    <string name="member_no_phone">No phone number for this member.</string>
    <string name="member_on_permit">On permit</string>
    <string name="member_points_format">%1$d points</string>
    <string name="member_prao" translatable="false">Prao</string>
    <string name="member_send_email">Send e-mail</string>
    <string name="member_send_message">Send SMS</string>
    <string name="member_stad" translatable="false">STAD</string>
    <string name="member_team">Team</string>
    <string name="member_title">Title</string>
    <string name="member_vraq" translatable="false">Vraq</string>

    <string name="members_groups">Groups</string>
    <string name="members_nav_title">Members</string>
    <string name="members_no_results">No members found.</string>
    <string name="members_no_title_placeholder">(none)</string>
    <string name="members_no_team_placeholder">(none)</string>
	<string name="members_search_hint">Search for a member</string>
    <string name="members_show_all">Show all</string>
    <string name="members_teams">Teams</string>

    <string name="network_error_not_available">There is no network available. This app won\'t work without a network connection.</string>
    <string name="network_error_not_available_title">No network</string>
    <string name="network_error_unspecified_protocol">An unexpected error occurred. Try again. If the issue persists, make sure you have the latest version of this app.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="notifications_error_unspecified_gcm">There was an error registering with Google\'s messaging service. Please ensure you have Internet connectivity, then try again.</string>
    <string name="notifications_error_unspecified_tmeit">There was an error registering with the notification service. Please ensure you have Internet connectivity, then try again.</string>
    <string name="notifications_in_the_future">In the future, there will be more options here for what types of notifications you will receive.</string>
    <string name="notifications_message_has_no_content">This message has no content.</string>
    <string name="notifications_nav_title">Notifications</string>
    <string name="notifications_x_notifications_from_tmeit">%d notifications from TMEIT</string>
    <string name="notifications_go_to_tmeit_se">Go to TMEIT.se to check them out.</string>
    <string name="notifications_notification_from_tmeit">Notification from TMEIT</string>
    <string name="notifications_receive_notifications">Receive notifications</string>
    <string name="notifications_server_is_still_processing">The server is still processing your request, please try again in a moment.</string>
    <string name="notifications_success">Success!</string>
    <string name="notifications_your_device_does_not_support">Your device does not support Google Play Services. Notifications are unavailable.</string>

    <string name="onboarding_authenticating_please_wait">Authenticating, please wait.</string>
    <string name="onboarding_log_in_using_kth_id">Log in using KTH ID</string>
    <string name="onboarding_log_in_without_kth_id">I don\'t have a KTH ID</string>
    <string name="onboarding_lets_try_that_again">Let\'s try that again</string>
    <string name="onboarding_scanning_emu_continue">Continue</string>
    <string name="onboarding_welcome_this_seems_to_be_the_first_time">Welcome! This seems to be your first time using this app. You will need to log in to an existing account.</string>

    <string name="repository_error_unspecified_network">There was an error contacting the server. Please ensure you have Internet connectivity, then try again.</string>
    <string name="repository_error_unspecified_protocol">An unexpected error occurred while downloading. Make sure you have the latest version of this app.</string>

    <string name="upload_photo_chooser_title">Select image</string>
    <string name="upload_photo_error_permissions">Couldn\'t open camera or gallery, something went wrong. Please make a bug report.</string>
    <string name="upload_photo_failed">Upload failed for some reason. Try again.</string>
    <string name="upload_photo_finish_nav_title">Select member</string>
    <string name="upload_photo_nav_title">Upload photo</string>
    <string name="upload_photo_rules">Offensive images, or images that a depicted person would object to having published on the Internet may not be uploaded. The image should be a recognizable photo of the persons\'s face. Images that violate these rules will be deleted. Repeated violations will result in this functionality being disabled for everyone.</string>
    <string name="upload_photo_select_existing">Select an existing photo</string>
    <string name="upload_photo_select_member">Select the member who is in this photo.</string>
    <string name="upload_photo_succeeded">Upload successful!</string>
    <string name="upload_photo_use_camera">Use camera to take photo</string>
    <string name="upload_photo_submit">Upload</string>
</resources>
