<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_members"
			android:title="@string/members_nav_title"/>
		<item
			android:id="@+id/nav_event_internal"
			android:title="@string/event_internal_nav_title"/>
		<item
			android:id="@+id/nav_event_external"
			android:title="@string/event_external_nav_title"/>
		<item
			android:id="@+id/nav_upload_photo"
			android:title="@string/upload_photo_nav_title"/>
		<item
			android:id="@+id/nav_age_check"
			android:title="@string/age_check_nav_title"/>
		<item
			android:id="@+id/nav_notifications"
			android:title="@string/notifications_nav_title"/>
		<item
			android:id="@+id/nav_about"
			android:title="@string/about_nav_title"/>
	</group>
</menu>