<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        style="@style/AgeCheckSmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_check_begin"/>

    <TextView
        android:id="@+id/age_check_birthdate"
        style="@style/AgeCheckLargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/age_check_placeholder"
        android:textSize="36sp"/>

    <TextView
        style="@style/AgeCheckSmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_check_end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxWidth="320dp"
        android:text="@string/age_check_legal"/>
</LinearLayout>